[gd_scene load_steps=2 format=3 uid="uid://bo7yo5jpm5yvn"]

[ext_resource type="Script" path="res://shop.gd" id="1_xx4et"]

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_xx4et")

[node name="Restart" type="Button" parent="."]
offset_left = 500.0
offset_top = 577.0
offset_right = 612.0
offset_bottom = 621.0
action_mode = 0
text = "TryAgain
"

[node name="Damage Up 1" type="Button" parent="."]
offset_left = 36.0
offset_top = 2.0
offset_right = 245.0
offset_bottom = 52.0
action_mode = 0
text = "Damage Up 1 (30)
"

[node name="Damage Up 2" type="Button" parent="."]
offset_left = 37.0
offset_top = 53.0
offset_right = 246.0
offset_bottom = 103.0
action_mode = 0
text = "Damage Up 2  (60)
"

[node name="Health Up 1" type="Button" parent="."]
offset_left = 254.0
offset_right = 440.0
offset_bottom = 51.0
action_mode = 0
text = "Health Up 1 (30)
"

[node name="Health Up 2" type="Button" parent="."]
offset_left = 255.0
offset_top = 53.0
offset_right = 439.0
offset_bottom = 107.0
action_mode = 0
text = "Health Up 2 (60)

"

[node name="Lifesteal 1" type="Button" parent="."]
offset_left = 456.0
offset_top = 1.0
offset_right = 640.0
offset_bottom = 55.0
action_mode = 0
text = "Health on kill 1 (100)"

[node name="Lifesteal 2" type="Button" parent="."]
offset_left = 458.0
offset_top = 57.0
offset_right = 639.0
offset_bottom = 112.0
text = "Health on kill 2 (200)"

[node name="Corruption Resistance 1" type="Button" parent="."]
offset_left = 652.0
offset_top = 2.0
offset_right = 861.0
offset_bottom = 52.0
text = "Max_corruption 1 (40)
"

[node name="Corruption Resistance 2" type="Button" parent="."]
offset_left = 653.0
offset_top = 57.0
offset_right = 862.0
offset_bottom = 107.0
action_mode = 0
text = "Max corruption 2 (40)
"

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Damage Up 1" to="." method="_on_damage_up_1_pressed"]
[connection signal="pressed" from="Damage Up 2" to="." method="_on_damage_up_2_pressed"]
[connection signal="pressed" from="Health Up 1" to="." method="_on_health_up_1_pressed"]
[connection signal="pressed" from="Health Up 2" to="." method="_on_health_up_2_pressed"]
[connection signal="pressed" from="Lifesteal 1" to="." method="_on_lifesteal_1_pressed"]
[connection signal="pressed" from="Lifesteal 2" to="." method="_on_lifesteal_2_pressed"]
[connection signal="pressed" from="Corruption Resistance 1" to="." method="_on_corruption_resistance_1_pressed"]
[connection signal="pressed" from="Corruption Resistance 2" to="." method="_on_corruption_resistance_2_pressed"]
